<resources>
    <string name="app_name">WhatsApp</string>


    <string name="digiteemail">Digite Seu E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastra-se</string>
    <string name="cadastra">Cadastrar</string>
    <string name="digite_seu_nome">Digite Seu Nome</string>
    <string name="sair">Sair</string>
    <string name="configuracoes">Configurações</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="texto_para_config">
        Esse não é o seu nome de usuário
        nem a sua senha. Esse nome firará visível
        para seus contatos de whatsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_de_usuario">Nome de Usuário</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="digite_sua_mensagem">Digite sua mensagem</string>
    <string name="title_activity_grupo">GrupoActivity</string>

</resources>
