<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="157dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="100dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="301dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digiteemail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="437dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextLoginSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLoginEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/entrar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="515dp"
            android:textColor="@color/branco"
            android:background="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/textViewCadastroCadastrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/nao_tem_conta"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="654dp"
            android:textColor="@color/branco"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>